--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Simple Liker</title>
   </head>
   <body>
-    <div id="modal">
+    <div id="modal" hidden>
       <h2>Error!</h2>
       <p id="modal-message"></p>
     </div>
@@ -74,3 +74,4 @@
   </body>
   <script src="main.js" charset="utf-8"></script>
 </html>
+
